fix: ensure Icon svgs are properly displayed on Safari

--- a/packages/interface-default/src/index.module.css
+++ b/packages/interface-default/src/index.module.css
@@ -88,6 +88,7 @@ html[data-theme='dark'] {
 
 .integrationIcon {
   width: 2rem;
+  height: 100%;
   padding-right: 0.5rem;
 }
 .integrationTitle {
